# pulumi-idp-demo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml  docker-publish.yml  pylint.yml
automation/: __init__.py  api.py  cli.py
infra/: Pulumi.dev.yaml  Pulumi.yaml
infra/s3/: Pulumi.dev.yaml  Pulumi.yaml
