[project]
name = "pulumi-idp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "pulumi>=3.218.0",
    "pulumi-aws>=7.16.0",
    "typer>=0.21.1",
]

[tool.uv.build-backend]
source-exclude = ["data/**", ".devcontainer/**", ".pulumi", ".venv/**"]

[tool.uv.build-backend.source-include]
# This pattern includes all files in the 'data' directory inside your source root
# e.g., src/my_package/data
patterns = ["src/pulumi_idp_demo/infra/**"]
